--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -210,6 +210,56 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/themeButton"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/playerButton"
+        >
+
+        <ImageView
+            android:id="@+id/iv_theme"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:padding="8dp"
+            android:src="@drawable/ic_all_themes"
+            android:tint="?textColor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:text="Change theme"
+            android:fontFamily="@font/semiboldfont"
+            android:textColor="?textColor"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_theme"
+            app:layout_constraintTop_toTopOf="@id/iv_theme" />
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_chevron_right_black_24dp"
+            android:tint="?textColor"
+            android:alpha="0.7"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="12dp"
+            app:layout_constraintTop_toTopOf="@id/iv_theme"
+            app:layout_constraintBottom_toBottomOf="@id/iv_theme"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/pro_layout"
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -219,7 +269,7 @@
         android:background="@drawable/pro_layout_card_bg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/playerButton">
+        app:layout_constraintTop_toBottomOf="@id/themeButton">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline50"
