--- a/app/src/main/res/layout/pro_sheet_layout.xml
+++ b/app/src/main/res/layout/pro_sheet_layout.xml
@@ -6,18 +6,18 @@
     android:background="@color/black">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline50"
+        android:id="@+id/guideline"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="150dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintGuide_percent="0.45"
         />
 
     <ImageView
         android:id="@+id/iv_preview"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="450dp"
         android:scaleType="centerCrop"
         android:src="@drawable/template"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,19 +46,50 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
+    <com.sofakingforever.stars.AnimatedStarsView
+        android:id="@+id/stars"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:starsView_bigStarThreshold="10dp"
+        app:starsView_meteoritesColors="@array/meteorites_colors"
+        app:starsView_meteoritesEnabled="true"
+        app:starsView_meteoritesInterval="2000"
+        app:starsView_maxStarSize="3dp"
+        app:starsView_minStarSize="1dp"
+        android:background="@android:color/transparent"
+        app:starsView_starColors="@array/star_colors_small"
+        app:starsView_starCount="100"
+        app:layout_constraintTop_toBottomOf="@id/buy_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
         android:fontFamily="@font/boldfont"
         android:text="@string/buy_pro_pack"
         android:textColor="#ffffff"
-        android:textSize="30dp"
+        android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/buy_button" />
+        app:layout_constraintBottom_toTopOf="@id/subTitle" />
+
+    <TextView
+        android:id="@+id/subTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="12dp"
+        android:fontFamily="@font/semiboldfont"
+        android:alpha="0.8"
+        android:text="Pro pack unlocks all themes, pro features and supports development."
+        android:textColor="#ffffff"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toTopOf="@id/buy_button"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buy_button"
@@ -71,8 +102,8 @@
         android:textAllCaps="false"
         android:background="@drawable/button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline50"
-        app:layout_constraintTop_toBottomOf="@id/guideline50"
+        app:layout_constraintBottom_toTopOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@id/guideline"
         android:layout_marginStart="12dp"
         />
 
@@ -80,8 +111,8 @@
         android:id="@+id/desc0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/no_ads"
-        android:textSize="17dp"
+        android:text="No Ads Ever"
+        android:textSize="15dp"
         android:fontFamily="@font/semiboldfont"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,26 +121,45 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
         android:layout_marginTop="12dp"
-        android:drawableStart="@drawable/ic_check_circle_24"
+        android:drawableStart="@drawable/ic_no_ads"
         android:drawablePadding="5dp"
         />
 
-
     <TextView
-        android:id="@+id/desc1"
+        android:id="@+id/desc0sub"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/custom_themes"
-        android:textSize="17dp"
-        android:fontFamily="@font/semiboldfont"
+        android:text="This app isn't ad supported and aims to stay that way. Pro version will always be ad free."
+        android:textSize="12dp"
+        android:alpha="0.8"
+        android:drawableStart="@drawable/ic_check_circle_24"
+        android:drawableTint="@android:color/transparent"
+        android:fontFamily="@font/regularfont"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/desc0"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
+        android:layout_marginTop="5dp"
+        android:drawablePadding="5dp"
+        />
+
+    <TextView
+        android:id="@+id/desc1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/custom_themes"
+        android:textSize="15dp"
+        android:fontFamily="@font/semiboldfont"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/desc0sub"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginTop="12dp"
-        android:drawableStart="@drawable/ic_check_circle_24"
+        android:drawableStart="@drawable/ic_all_themes"
         android:drawablePadding="5dp"
         />
 
@@ -117,8 +167,8 @@
         android:id="@+id/desc1sub"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Starry night, Blurry and many more"
-        android:textSize="14dp"
+        android:text="Animated starry night themes, blurry and more!"
+        android:textSize="12dp"
         android:alpha="0.8"
         android:drawableStart="@drawable/ic_check_circle_24"
         android:drawableTint="@android:color/transparent"
@@ -138,7 +188,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/pro_features"
-        android:textSize="17dp"
+        android:textSize="15dp"
         android:fontFamily="@font/semiboldfont"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +197,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
         android:layout_marginTop="12dp"
-        android:drawableStart="@drawable/ic_check_circle_24"
+        android:drawableStart="@drawable/ic_pro_features"
         android:drawablePadding="5dp"
         />
 
@@ -155,8 +205,8 @@
         android:id="@+id/desc2sub"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Folders, sleep timer, color customization"
-        android:textSize="14dp"
+        android:text="Unlocks pro features and any future pro additions."
+        android:textSize="12dp"
         android:alpha="0.8"
         android:drawableStart="@drawable/ic_check_circle_24"
         android:drawableTint="@android:color/transparent"
@@ -175,8 +225,8 @@
         android:id="@+id/desc3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/future_updates"
-        android:textSize="17dp"
+        android:text="All Now Playing Screens"
+        android:textSize="15dp"
         android:fontFamily="@font/semiboldfont"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
@@ -185,7 +235,65 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
         android:layout_marginTop="12dp"
+        android:drawableStart="@drawable/ic_now_playing_screens"
+        android:drawablePadding="5dp"
+        />
+
+    <TextView
+        android:id="@+id/desc3sub"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Includes new Blur player with a clean minimal design."
+        android:textSize="12dp"
+        android:alpha="0.8"
         android:drawableStart="@drawable/ic_check_circle_24"
+        android:drawableTint="@android:color/transparent"
+        android:fontFamily="@font/regularfont"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/desc3"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginTop="5dp"
+        android:drawablePadding="5dp"
+        />
+
+    <TextView
+        android:id="@+id/desc4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/future_updates"
+        android:textSize="15dp"
+        android:fontFamily="@font/semiboldfont"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/desc3sub"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginTop="12dp"
+        android:drawableStart="@drawable/ic_future_updates"
+        android:drawablePadding="5dp"
+        />
+
+    <TextView
+        android:id="@+id/desc4sub"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Includes any pro content added in future updates."
+        android:textSize="12sp"
+        android:alpha="0.8"
+        android:drawableStart="@drawable/ic_check_circle_24"
+        android:drawableTint="@android:color/transparent"
+        android:fontFamily="@font/regularfont"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/desc4"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginTop="5dp"
         android:drawablePadding="5dp"
         />
 
@@ -195,13 +303,14 @@
         android:layout_height="wrap_content"
         android:text="Restore Purchase"
         android:textColor="@color/white"
-        android:textSize="12dp"
+        android:textSize="12sp"
         android:alpha="0.5"
         android:textAllCaps="false"
         android:background="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/desc3"
+        app:layout_constraintTop_toBottomOf="@id/desc4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="20dp"
         />
 
@@ -215,15 +324,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/ic_close_white_24dp"
-        />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/gradient_purchase_activity"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
