changed color of pro card

--- a/app/src/main/res/layout/intro_layout.xml
+++ b/app/src/main/res/layout/intro_layout.xml
@@ -129,7 +129,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title2"
         android:background="@drawable/pro_layout_card_bg"
-        android:backgroundTint="@color/lightblue"
         android:layout_marginTop="5dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
@@ -161,7 +160,7 @@
                 android:text="Pro Pack"
                 android:textSize="24dp"
                 android:fontFamily="@font/semiboldfont"
-                android:textColor="@color/lightblue"
+                android:textColor="#ff0000"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/guideline50h"
                 android:layout_marginStart="12dp"
@@ -171,10 +170,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Unlock all themes and pro features"
+                android:text="Unlock all themes and pro features."
                 android:textSize="12dp"
                 android:fontFamily="@font/regularfont"
-                android:textColor="@color/black"
+                android:textColor="#ff0000"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/guideline50h"
                 app:layout_constraintEnd_toEndOf="parent"
